# email-triage-openenv

./: Dockerfile  README.md  app.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  tasks.py
email_env/: README.md  client.py  models.py  openenv.yaml  pyproject.toml
email_env/server/: Dockerfile  __init__.py  app.py  email_env_environment.py
server/: app.py
